--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: troysk704
 github_username:  troysk
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
